# islandora_workbench

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  WorkbenchConfig.py  add_media.yml  autogen_content.yml  config.yml  create-collections.yml  create.yml  create_from_files.yml  delete.yml  delete_media.yml  demoBDcreate_all_localhost.yml  demoBDcreate_all_prod.yml  demoBDcreate_all_prod_022621.yml  demoBDcreate_smallbatch_prod.yml  entity_post_task.yml  example_content.yml  feature_1000.py  google_spreadsheet.yml  mkdocs.yml  pyproject.toml  setup.py  update.yml  workbench  workbench_export.py  workbench_fields.py  workbench_utils.py
.github/: PULL_REQUEST_TEMPLATE.md
contact_sheet_assets/: contact-sheet.css
demo_content_files/: demo_content.csv  demo_content_smallbatch.csv
docs/: adding_media.md  aliases.md  alt_text.md  check.md  configuration.md  creating_nodes_from_files.md  deleting_media.md  deleting_nodes.md  field_templates.md  field_types.md  generating_sample_content.md  index.md  installation.md  logging.md  media_types.md  nodes_only.md  output_csv.md  paged_and_compound.md  preparing_data.md  rolling_back.md  sample_data.md  updating_nodes.md
i7Import/: get_islandora_7_content.py  i7ImportUtilities.py
i8demo_BD/: Sample PDF (source).docx  WORKING_i8_SampleIngestSheet.xlsx  WORKING_i8_SampleIngestSheet_02.xlsx  i8_sample_objects_workbench.xlsx  i8_sample_objects_workbench_FULL.csv  i8_sample_objects_workbench_FULL_022621.csv  i8_sample_objects_workbench_SMALLBATCH.csv
input_data/: add_media.csv  collections.csv  delete.csv  delete_media.csv  (+6 more)
(+291 files in other folders)
