[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["workbench", "workbench_*.py", "WorkbenchConfig.py"]
exclude = ["assets*", "input_data*"]

[project]
name = "Islandora-Workbench"
version = "0.1.dev0"
authors = [
    { name = "Mark Jordan" }
]
description = "A command-line tool that allows creation, updating, and deletion of Islandora content."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.22,<33",
    "requests_cache>=1.1",
    "ruamel.yaml>=0.17.21",
    "ruamel.yaml.clib>=0.2.12",
    "pyparsing<3.2",
    "pytest",
    "progress_bar",
    "openpyxl",
    "unidecode",
    "edtf_validate",
    "typing-extensions>=4.14.0",
    "rich",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/mjordan/islandora_workbench"
Documentation = "https://mjordan.github.io/islandora_workbench/"

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313", "py314"]
include = '(\.pyi?|\.ipynb|workbench)$'
check = true
verbose = true
